Fix chat height on tablets
In the study UI rewrite, `max-height: unset` was added
to the 3 col layout because verticalResizers controlled
height. However, for touch devices, these resizers are
not present.  So this 'unset' requires the same css
selector that controls the vericalResizer.

Fixes: #18848

--- a/ui/analyse/css/study/_layout.scss
+++ b/ui/analyse/css/study/_layout.scss
@@ -22,6 +22,10 @@
     .mchat {
       margin-top: 0;
       min-height: 34px;
+
+      @media not all and (hover: hover) and (pointer: fine) {
+        max-height: 40vh;
+      }
     }
   }
 }
